--- a/templates/estimations/editEstim.html.twig
+++ b/templates/estimations/editEstim.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Vérification de l'estimation{% endblock %}
 
 {% block body %}
-    {{ form_start(form) }}
+
     <main class="container">
         <div class="progress">
             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="7" style="width: 28%">
@@ -15,167 +15,116 @@
                 <h1 class="primary-title">Etape 2 : vérification des informations</h1>
             </div>
         </div>
-        <div class="row bg-info align-items-center">
-            <div class="col-3 text-right">
+
+        <div class="row font-weight-bold bg-info text-center">
+               <h4 class="m-auto text-light p-3">Informations fournies</h4>
+        </div>
+
+        <div class="row bg-light pt-3 ">
+            <div class="offset-2 text-center col-4 align-items-center">
+                <p>Marque :</p>
             </div>
-            <div class="col-2 text-center font-weight-bold">
-                Informations fournies
-            </div>
-            <div class="col-1 text-center ">
-                Cocher si valide
-            </div>
-            <div class="col-6 mx-auto text-center form p-4">
-                Modification (si nécessaire)
+            <div class="col-4 text-center">
+               <p>{{  estimation.brand }}</p>
             </div>
         </div>
-        <div class="row bg-light align-items-center">
-            <div class="col-3 text-right">
-                {{ form_label(form.brand) }} :
+
+        <div class="row bg-light pt-3">
+            <div class="offset-2 text-center col-4 align-items-center">
+                <p>Modèle :</p>
             </div>
-            <div class="col-2 text-center font-weight-bold">
-                {{  estimation.brand }}
-            </div>
-            <div class="col-1 text-center ">
-                <input type="checkbox" aria-label="Checkbox">
-            </div>
-            <div class="col-6 mx-auto text-center form p-4">
-                {{ form_widget(form.brand, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
-                {{ form_errors(form.brand) }}
+            <div class="col-4 text-center">
+                <p>{{ estimation.model }}</p>
             </div>
         </div>
-        <div class="row bg-light align-items-center">
-            <div class="col-3 text-right">
-                Modèle :
+
+        <div class="row bg-light pt-3">
+            <div class="offset-2 col-4 text-center align-items-center">
+                <p>Capacité :</p>
             </div>
-            <div class="col-2 text-center font-weight-bold">
-                {{ estimation.model }}
-            </div>
-            <div class="col-1 text-center ">
-                <input type="checkbox" aria-label="Checkbox">
-            </div>
-            <div class="col-6 mx-auto text-center form p-4">
-                {{ form_widget(form.model, {'attr': {'class': 'form-control mt-3', 'placeholder': 'Nom du partenaire', 'label': 'Nom du partenaire', 'required': true}}) }}
+            <div class="col-4 text-center">
+                <p>{{ estimation.capacity }} Go</p>
             </div>
         </div>
-        <div class="row bg-light align-items-center">
-            <div class="col-3 text-right">
-                Capacité :
+
+        <div class="row bg-light pt-3">
+            <div class="offset-2 col-4 text-center align-items-center">
+                <p>Dégât par un liquide :</p>
             </div>
-            <div class="col-2 text-center font-weight-bold">
-                {{ estimation.capacity }} Go
-            </div>
-            <div class="col-1 text-center ">
-                <input type="checkbox" aria-label="Checkbox">
-            </div>
-            <div class="col-6 mx-auto text-center form p-4">
-                {{ form_widget(form.capacity, {'attr': {'class': 'form-control mt-3', 'required': true}}) }}
-                {{ form_help(form.capacity) }}
-                {{ form_errors(form.capacity) }}
-            </div>
-        </div>
-        <div class="row bg-light align-items-center">
-            <div class="col-3 text-right">
-                Dommages par un liquide :
-            </div>
-            <div class="col-2 text-center font-weight-bold">
+            <div class="col-4 text-center">
                {% if estimation.liquidDamage > 0 %}
-                    OUI
+                   OUI
                 {% else %}
-                    NON
+                   NON
                 {% endif %}
             </div>
-            <div class="col-1 text-center">
-                <input type="checkbox" aria-label="Checkbox">
-            </div>
-            <div class="col-6 mx-auto text-left form p-4">
-                {{ form_widget(form.liquidDamage, {'attr': {'class': 'form-check mt-3', 'required': true}}) }}
-            </div>
         </div>
-        <div class="row bg-light align-items-center">
-            <div class="col-3 text-right">
-                Ecran abimé :
+
+        <div class="row bg-light pt-3">
+            <div class="offset-2 col-4 text-center align-items-center">
+                <p>Ecran abimé :</p>
             </div>
-            <div class="col-2 text-center font-weight-bold">
+            <div class="col-4 text-center">
                 {% if estimation.screenCracks > 0 %}
-                    OUI
+                   OUI
                 {% else %}
-                    NON
+                   NON
                 {% endif %}
             </div>
-            <div class="col-1 text-center ">
-                <input type="checkbox" aria-label="Checkbox">
-            </div>
-            <div class="col-6 mx-auto text-left form p-4">
-                {{ form_widget(form.screenCracks, {'attr': {'class': 'form-check mt-3', 'required': true}}) }}
-            </div>
         </div>
-        <div class="row bg-light align-items-center">
-            <div class="col-3 text-right">
-                Coque abimée :
+
+        <div class="row bg-light pt-3">
+            <div class="offset-2 col-4 text-center align-items-center">
+                <p>Coque abimée :</p>
             </div>
-            <div class="col-2 text-center font-weight-bold">
+            <div class="col-4 text-center">
                 {% if estimation.casingCracks > 0 %}
                     OUI
                 {% else %}
                     NON
                 {% endif %}
             </div>
-            <div class="col-1 text-center ">
-                <input type="checkbox" aria-label="Checkbox">
-            </div>
-            <div class="col-6 mx-auto text-left form p-4">
-                {{ form_widget(form.casingCracks, {'attr': {'class': 'form-check mt-3', 'required': true}}) }}
-            </div>
         </div>
-        <div class="row bg-light align-items-center">
-            <div class="col-3 text-right">
-                Batterie défectueuse :
+
+        <div class="row bg-light pt-3">
+            <div class="offset-2 col-4 text-center align-items-center">
+                <p>Batterie défectueuse :</p>
             </div>
-            <div class="col-2 text-center font-weight-bold">
+            <div class="col-4 text-center">
                 {% if estimation.batteryCracks > 0 %}
                     OUI
                 {% else %}
                     NON
                 {% endif %}
             </div>
-            <div class="col-1 text-center ">
-                <input type="checkbox" aria-label="Checkbox">
-            </div>
-            <div class="col-6 mx-auto text-left form p-4">
-                {{ form_widget(form.batteryCracks, {'attr': {'class': 'form-check mt-3', 'required': true}}) }}
-            </div>
         </div>
-        <div class="row bg-light align-items-center">
-            <div class="col-3 text-right">
-                Bouton(s) défectueux :
+
+        <div class="row bg-light pt-3">
+            <div class="offset-2 col-4 text-center align-items-center">
+                <p>Bouton(s) défectueux :</p>
             </div>
-            <div class="col-2 text-center font-weight-bold">
+            <div class="col-4 text-center">
                 {% if estimation.buttonCracks > 0 %}
                     OUI
                 {% else %}
                     NON
                 {% endif %}
             </div>
-            <div class="col-1 text-center ">
-                <input type="checkbox" aria-label="Checkbox">
-            </div>
-            <div class="col-6 mx-auto text-left form p-4">
-                {{ form_widget(form.buttonCracks, {'attr': {'class': 'form-check mt-3', 'required': true}}) }}
-            </div>
         </div>
-        <div class="row bg-light align-items-center">
-            <div class="col-3 text-right">
-                Prix estimé :
+
+        <div class="row bg-light pt-3">
+            <div class="offset-2 col-4 text-center align-items-center">
+                <p>Prix estimé :</p>
             </div>
-            <div class="col-2 text-center font-weight-bold">
+            <div class="col-4 text-center font-weight-bold">
                 {{ estimation.estimatedPrice}} €
             </div>
-            <div class="col-1 text-center ">
-            </div>
-            <div class="col-6 mx-auto text-left form p-4">
-                Le prix est recalculé automatiquement si des données sont mises à jour.
-            </div>
         </div>
+
+        <div class="row bg-light p-4">
+            <p class="font-italic mx-auto">Pour réévaluer l'estimation, cliquez sur "mettre à jour"</p>
+        </div>
+
         <div class="row">
             <div class="col-4 mx-auto text-left form p-4">
                 <a href="{{ path('estimations_index') }}" class="btn btn-dark"><- Précédent</a>
@@ -186,5 +135,5 @@
             </div>
         </div>
     </main>
-    {{ form_end(form) }}
+
 {% endblock %}
